--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <button class="shop-item close-shop" id="closeShop">Schließen</button>
     </div>
 
-    <audio id="clickSound" src="cookie-sound.mp3"></audio>
-    <audio id="purchaseSound" src="purchase-sound.mp3"></audio>
+    <audio id="clickSound" src="cookie-saund.mp3"></audio>
+    <audio id="purchaseSound" src="cookie-saund.mp3"></audio>
 
     <script>
         let score = 0;
